# WmaskEX

./: .gitignore  CMakeLists.txt  README.en.md  README.md  README_zh.md
src/: ISpineRuntime.h  WmaskEXImage.cpp  WmaskEXMainWindow.cpp  WmaskEXSpine.cpp  WmaskEXSpineConfigAutoGenerator.cpp  WmaskEXUtils.cpp  header.h  main.cpp
src/res/: resources.rc
src/spine/: readme.md
src/spine/spine-cpp-37/include/spine/: spine.h
src/spine/spine-cpp-37/src/spine/: SkeletonRenderer.cpp
src/spine/spine-cpp-38/include/spine/: spine.h
src/spine/spine-cpp-38/src/spine/: SkeletonBinary.cpp  SkeletonJson.cpp  SkeletonRenderer.cpp
src/spine/spine-cpp-40/include/spine/: spine.h
src/spine/spine-cpp-41/include/spine/: SkeletonRenderer.h  spine.h
src/spine/spine-cpp-41/src/spine/: SkeletonRenderer.cpp
src/spine/spine-cpp-42/src/spine/: ColorTimeline.cpp  SkeletonJson.cpp
src/spine/spine-opengl/: SpineRuntime.cpp  spine-opengl.cpp  spine-opengl.h
